--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Let's face it: the online reference documentation for ColdFusion 9 is *not* great.
 
-loss is a better way to browse the ColdFusion 9 reference.  You get the same great content, but can customize your experience with page bookmarking, inline comments, and personal notes. Plus, you can use the search feature to find what you're looking for quickly...without wading through Adobe's entire knowledgebase.
+Gloss is a better way to browse the ColdFusion 9 reference.  You get the same great content, but can customize your experience with page bookmarking, inline comments, and personal notes. Plus, you can use the search feature to find what you're looking for quickly...without wading through Adobe's entire knowledgebase.
